--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>This is sample</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus in ipsa cum est omnis dolore fuga accusamus 
+        voluptate rem consequatur laborum vel, odit non quae, asperiores ad, molestiae inventore veniam.</p>
 </body>
 </html>
